--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   # Path to the solution file relative to the root of the project.
-  SOLUTION_FILE_PATH: C:\Users\pm91z\source\repos\gitlab_proj\gitlab_proj
+  SOLUTION_FILE_PATH: C:\Users\pm91z\source\repos\gitlab_proj\gitlab_proj.sln
 
   # Configuration type to build.
   # You can convert this to a build matrix if you need coverage of multiple configuration types.
