--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: [self-hosted, windows, x64]
 
     steps:
     - uses: actions/checkout@v4
